fix: Fixed 00_basic.ipynb to add some contents

--- a/00_basic.ipynb
+++ b/00_basic.ipynb
@@ -25,19 +25,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello\n"
+      "Hello\n",
+      "C:\\some\n",
+      "ame\n",
+      "C:\\some\n",
+      "ame\n",
+      "C:\\some\\name\n",
+      "Usage: thingy [OPTIONS]\n",
+      "     -h                        Display this usage message\n",
+      "     -H hostname               Hostname to connect to\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello\")"
+    "print(\"Hello\")\n",
+    "\n",
+    "# Besides numbers, Python can also manipulate strings,\n",
+    "# which can be expressed in several ways. They can be\n",
+    "# enclosed in single quotes ('...') or double quotes (\"...\")\n",
+    "# with the same result 2. \\ can be used to escape quotes:\n",
+    "\n",
+    "print(\"C:\\some\\name\")  # here \\n means newline!\n",
+    "print('C:\\some\\name')  # here \\n means newline!\n",
+    "print(r'C:\\some\\name')  # note the r before the quote\n",
+    "\n",
+    "print(\"\"\"\\\n",
+    "Usage: thingy [OPTIONS]\n",
+    "     -h                        Display this usage message\n",
+    "     -H hostname               Hostname to connect to\n",
+    "\"\"\")"
    ]
   }
  ],
