fix: Fixed to appear .ipynb's output

--- a/00_basic.ipynb
+++ b/00_basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "C:\\some\n",
+      "ame\n",
+      "C:\\some\n",
+      "ame\n",
+      "C:\\some\\name\n",
+      "Usage: thingy [OPTIONS]\n",
+      "     -h                        Display this usage message\n",
+      "     -H hostname               Hostname to connect to\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello\")\n",
     "\n",
